# pufferfish

./: .drone.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  config.json  estimate.sh  index.sh  microbiome_config.json  puff_align.sh
.drone/: build.sh  copy_build.sh
.github/workflows/: cpp.yml
cmake/Modules/: FindJemalloc.cmake
docker/: Dockerfile
include/: BinWriter.hpp  BooPHF.h  BooPHF.hpp  BulkChunk.hpp  CanonicalKmer.hpp  CanonicalKmerIterator.hpp  Cedar.hpp  CommonTypes.hpp  EquivalenceClassBuilder.hpp  FastxParser.hpp  FastxParserThreadUtils.hpp  FatPufferGraph.hpp  GFAConverter.hpp  GraphTraverser.hpp  HitCollector.hpp  IterativeRefSeqConstructor.hpp  KSW2Aligner.hpp  Kmer.hpp  Mappings.hpp  MemChainer.hpp  MemClusterer.hpp  MemCollector.hpp  OurGFAReader.hpp  PairedAlignmentFormatter.hpp  ProgOpts.hpp  PuffAligner.hpp  PuffMappingReader.hpp  PufferFS.hpp  PufferGraph.hpp  PufferfishAligner.hpp  PufferfishBaseIndex.hpp  PufferfishBinaryGFAReader.hpp  PufferfishConfig.hpp  PufferfishGFAReader.hpp  PufferfishIndex.hpp  PufferfishLossyIndex.hpp  PufferfishSparseIndex.hpp  Pufferize.hpp  RefSeqConstructor.hpp  SAMReader.hpp  (+14 more)
include/cereal/archives/: xml.hpp
include/cereal/details/: polymorphic_impl.hpp
include/cereal/types/: polymorphic.hpp
include/compact_vector/: compact_iterator.hpp  compact_vector.hpp
include/ksw2pp/: KSW2Aligner.hpp  ksw2.h
include/zstr/: strict_fstream.hpp  zstr.hpp
results/: bulk_performance.res  bulk_performance.xlsx  sameSpecies_performance.xlsx
scripts/: make-release.sh  merge_into_master.sh  microbiome_config.json  puff_align.sh  pufferize.py  samStats.ipynb  validate_results.py
scripts/microbiome_experiments/: microbiome_align_quantify.sh  microbiome_sameSpecies_align.sh  microbiome_simulate_reads.sh  shuffle_reads.sh
src/: BCALMPufferizer.cpp  Bckup_RefSeqConstructor.x  CMakeLists.txt  CanonicalKmer.cpp  CanonicalKmerIterator.cpp  Cedar.cpp  EdgeDensity.cpp  EdgeDensityCustom.cpp  FastxParser.cpp  FixFasta.cpp  GFAConverter.cpp  GFAPufferFishIndex.cpp  GFAPufferFishIndexer.cpp  GFAReader.cpp  IterativePufferfishAligner.cpp  IterativeRefSeqConstructor.cpp  MemChainer.cpp  MemClusterer.cpp  MemCollector.cpp  MinimizerTester.cpp  MyGFATester.cpp  MyGraphTester.cpp  OurGFAReader.cpp  PuffAligner.cpp  PufferFS.cpp  PufferFishIndex.cpp  PufferFishIndexer.cpp  Pufferfish.cpp  PufferfishAligner.cpp  PufferfishBaseIndex.cpp  PufferfishBinaryGFAReader.cpp  PufferfishExamine.cpp  PufferfishGFAReader.cpp  PufferfishIndex.cpp  PufferfishIndexer.cpp  PufferfishKmerQuery.cpp  PufferfishLossyIndex.cpp  PufferfishMapper.cpp  PufferfishSparseIndex.cpp  PufferfishStats.cpp  (+19 more)
src/ksw2pp/: KSW2Aligner.cpp  ksw2_extz2_sse.c
src/testing/: SAMFilter.cpp
tests/compile_tests/: int128_numeric_limits.cpp
